--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     
       <div >
-      <img src="./assets/user login.jpg" alt="login" class="user-login">
+      <img src="" alt="login" class="user-login">
       <h1>SP AUTOPARTES</h1>   
       </div>
 
@@ -33,7 +33,7 @@
     <main>
         <div class="div-uno">
          <img src="./assets/Faros 1.jpg" alt="Faros" class="imagen-dos">
-         <img src="./assets/Paragolpes.jpg" alt="Paragolpe" class="imagen-dos">
+         <img src="./assets/Paragolpe 1.jpg" alt="Paragolpe" class="imagen-dos">
          <img src="./assets/Opticas w.jpg" alt="Opticas" class="imagen-dos">
         </div>
 
