correcion pag faros

--- a/pages/Faros.html
+++ b/pages/Faros.html
@@ -38,7 +38,7 @@
           <option value="Volkswagen">Volkswagen</option>   
          </select>
       <div>
-        <img src="../assets/Faros.jpg" alt="Faros" class="img-1">
+        <img src="../assets/Faros 1.jpg" alt="Faros" class="img-1">
         <br>
         <br>
         <br>
