--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
 </head>
@@ -66,7 +67,6 @@
             <input type="submit" name="Enviar" value="Enviar">
             <input type="reset" name="Limpiar" value="Cancelar">
             <br>  
-            <button class="button-contacto"><a href="../index.html">Volver al Inicio</a></button>   
           </div>
     
        
