--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -12,7 +12,7 @@
 
 
 <body id="grilla-dos">
-   <header>
+   <header class="container-fluid">
       <img src="../assets/user login.jpg" alt="login" class="user-login-dos">
       <h1>SP AUTOPARTES</h1>
       <div>
