--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body id="grilla">
-  <header>
+  <header class="container-fluid">
     
       <div>
       <img src="" alt="login" class="user-login">
