--- a/pages/Faros.html
+++ b/pages/Faros.html
@@ -31,13 +31,16 @@
     <fieldset>
       <form action="" method="post">
      <div class="div-tres">
+      <div>
          <legend class="legend-dos">MARCAS</legend>
+         <div>
           <select name="marcas" id="marcas">
           <option value="Ford">Ford</option>
           <option value="Fiat">Fiat</option>
           <option value="Renault">Renault</option>
           <option value="Volkswagen">Volkswagen</option>   
          </select>
+        </div>
       <div>
         <img src="../assets/Faros 1.jpg" alt="Faros" class="img-1">
         <br>
@@ -46,13 +49,12 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
          <legend class="legend-tres">ARTICULOS</legend>
+         <div>
          <select name="artículos" id="artículos">
             <option value="Faros">Faros</option>
         </select>
+      </div>
       </div>
       <div>
         <br>
@@ -61,10 +63,8 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
         <legend class="legend-cuatro">AÑO</legend>
+        <div>
         <select name="año" id="año">
             <option value="2010">2010</option>
             <option value="2011">2011</option>
@@ -81,7 +81,7 @@
             <option value="2022">2022</option>
         </select>
       </div>
-     </div>
+      </div>
      <div class="div-botones">
       <input type="submit" name="Enviar" value="Enviar">
       <input type="reset" name="Limpiar" value="Cancelar">
@@ -97,8 +97,14 @@
     
 
   </main>
-
-<footer>   www.SPAutopartes.com.ar    /// -----   SP AUTOPARTES® copyright©   -----             </footer>
+  <footer class="container-fluid">  
+    <div class="row text-center"> 
+      
+      <div> www.SPAutopartes.com.ar    /// -----   SP AUTOPARTES® copyright©   -----       </div>    
+  
+    </div>
+  
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
