--- a/pages/Opticas.html
+++ b/pages/Opticas.html
@@ -34,12 +34,14 @@
     <form>
      <div class="div-tres"> 
         <legend class="legend-dos">MARCAS</legend>
+        <div>
         <select name="marcas" id="marcas">
             <option value="Ford">Ford</option>
           <option value="Fiat">Fiat</option>
           <option value="Renault">Renault</option>
           <option value="Volkswagen">Volkswagen</option>
         </select>
+      </div>
       <div>
         <img src="../assets/Opticas.jpg" alt="Opticas" class="img-1">
         <br>
@@ -48,13 +50,12 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
         <legend class="legend-tres">ARTICULOS</legend>
+        <div>
         <select name="artículos" id="artículos">
             <option value="Opticas">Opticas</option>
         </select>
+      </div>
       </div>
       <div>
         <br>
@@ -63,10 +64,8 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
          <legend class="legend-cuatro">AÑO</legend>
+         <div>
         <select name="año" id="año">
             <option value="2010">2010</option>
             <option value="2011">2011</option>
@@ -82,8 +81,7 @@
             <option value="2021">2021</option>
             <option value="2022">2022</option>
         </select>
-        </div>
-        <br>
+      </div>
         </div>
         <div class="div-botones">
         <input type="submit" name="Enviar" value="Enviar">
@@ -102,10 +100,17 @@
 
   </main>  
 
-    <footer>   www.SPAutopartes.com.ar    /// -----   SP AUTOPARTES® copyright©   -----             </footer>
+  <footer class="container-fluid">  
+    <div class="row text-center"> 
+      
+      <div> www.SPAutopartes.com.ar    /// -----   SP AUTOPARTES® copyright©   -----       </div>    
+  
+    </div>
+  
+  </footer> 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     
 </body>
 </html>
