--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <img src="./assets/Paragolpe 1.jpg" alt="Paragolpe" class="imagen-dos">
 
-      <img src="./assets/Opticas w.jpg" alt="Opticas" class="imagen-tres">
+      <img src="./assets/Opticas w.jpg" alt="Opticas" class="imagen-dos">
 
 
 
