--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 
-  <header>
+  <header class="container-fluid">
 
 
     <div class="header_test">
@@ -63,14 +63,16 @@
 
 
 
-    <main>
+    <main class="container">
 
-      <img src="./assets/Faros 1.jpg" alt="Faros" class="imagen-dos">
+     <div class="row" id="main">
 
-      <img src="./assets/Paragolpe 1.jpg" alt="Paragolpe" class="imagen-dos">
+      <img src="./assets/Faros 1.jpg" alt="Faros" class="imagen-dos" class="col-4 d-flex flex-column justify-content-center align-items-center">
 
-      <img src="./assets/Opticas w.jpg" alt="Opticas" class="imagen-dos">
+      <img src="./assets/Paragolpe 1.jpg" alt="Paragolpe" class="imagen-dos" class="col-4">
 
+      <img src="./assets/Opticas w.jpg" alt="Opticas" class="imagen-dos" class="col-4">
+    </div>
 
 
     </main>
@@ -84,7 +86,9 @@
 
   <p> www.SPAutopartes.com.ar /// ----- SP AUTOPARTES® copyright© ----- </p> </footer>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  
 
 </html>
 
