--- a/pages/Faros.html
+++ b/pages/Faros.html
@@ -119,11 +119,6 @@
           </select>
         </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <div class="div-botones">
           <input type="submit" name="Enviar" value="Enviar">
           <input type="reset" name="Limpiar" value="Cancelar">
@@ -143,5 +138,7 @@
   <p> www.SPAutopartes.com.ar /// ----- SP AUTOPARTES® copyright© ----- </p> </footer>
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  
 </html>
