--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -74,9 +74,9 @@
          <li>Correo electrónico: spautopartes@gmail.com</li>
          <li>Donde encontrarnos: Av. Corrientes 1298</li>
         </ul>
-        
-        <img src="../assets/data=qYqji6iNG4kCjX0Rp5zCvHRF2PPGFvZlFMiEvqi9ZGf1yh7zQs1QuihbRqNwMHG_bG9IOEwyQu7sLjjXLmWPBLLyz8txa9XtY77oPFTkrlQQtG74n6aE0aPFxs3cJsc2m4IATMBf1lzgSdoqt_g6YIG2LF7mkWA-UO17Tw.png" alt="Ubicación" class="img-contacto">
-        
+          <div class="container-img">
+             <img src="../assets/data=qYqji6iNG4kCjX0Rp5zCvHRF2PPGFvZlFMiEvqi9ZGf1yh7zQs1QuihbRqNwMHG_bG9IOEwyQu7sLjjXLmWPBLLyz8txa9XtY77oPFTkrlQQtG74n6aE0aPFxs3cJsc2m4IATMBf1lzgSdoqt_g6YIG2LF7mkWA-UO17Tw.png" alt="Ubicación" class="img-contacto">
+          </div>
         <div class="div-dos">
          <label for="Nombre">Ingrese Nombre</label>
          <input type="text" id="Nombre" placeholder="Nombre" required="Nombre">
