--- a/index.html
+++ b/index.html
@@ -65,14 +65,27 @@
 
     <main class="container">
 
-     <div class="row" id="main">
+     <section class="col-xl-6 d-flex flex-column justify-content-center align-items-center" id="main">
+    
+      <div class="row">
 
-      <img src="./assets/Faros 1.jpg" alt="Faros" class="imagen-dos" class="col-4 d-flex flex-column justify-content-center align-items-center">
+        <div id="carouselExampleSlidesOnly" class="carousel slide container-fluid" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/Faros 1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/Opticas w.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/Paragolpe 1.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
 
-      <img src="./assets/Paragolpe 1.jpg" alt="Paragolpe" class="imagen-dos" class="col-4">
+      </div>
 
-      <img src="./assets/Opticas w.jpg" alt="Opticas" class="imagen-dos" class="col-4">
-    </div>
+     </section>
 
 
     </main>
