--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
       <div class="row">
 
-        <div id="carouselExampleSlidesOnly" class="carousel slide container-fluid" data-bs-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./assets/Faros 1.jpg" class="d-block w-100" alt="...">
@@ -81,6 +81,9 @@
               <img src="./assets/Paragolpe 1.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
+        </div>
+
+   
         </div>
 
       </div>
