--- a/pages/Faros.html
+++ b/pages/Faros.html
@@ -73,8 +73,9 @@
             <option value="Volkswagen">Volkswagen</option>   
            </select>
           </div>
-        <div>
+          <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <img src="../assets/Faros 1.jpg" alt="Faros" class="img-1">
+          </div>
           <br>
           <br>
           <br>
