--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
     </div>
 
-    
-
+  
     <div> 
 
       <nav class="estilo-lista">
@@ -65,7 +64,7 @@
 
     <main class="container-fluid">
 
-     <section class="col-xl-6 d-flex flex-column justify-content-center align-items-center" id="main">
+     <section class="col-xl-12 row-xl-6 d-flex flex-column justify-content-center align-items-center" id="main">
     
       <div class="row">
 
