--- a/pages/Opticas.html
+++ b/pages/Opticas.html
@@ -33,8 +33,7 @@
 
     </div>
 
-  </header>
-
+    
   <div>
 
     <div>
@@ -59,6 +58,9 @@
 
     </div>
 
+  </header>
+
+
 
 
     <main>
@@ -75,7 +77,9 @@
             </select>
           </div>
           <div>
-            <img src="../assets/Opticas.jpg" alt="Opticas" class="img-1">
+            <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+              <img src="../assets/Opticas.jpg" alt="Opticas" class="img-1">
+            </div>
             <br>
             <br>
             <br>
