--- a/pages/Paragolpes.html
+++ b/pages/Paragolpes.html
@@ -33,8 +33,7 @@
 
     </div>
 
-  </header>
-
+    
   <div id="grilla">
 
     <div>
@@ -59,6 +58,9 @@
 
     </div>
 
+  </header>
+
+
 
 
     <main>
@@ -76,7 +78,9 @@
           </select>
         </div>
         <div>
+          <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <img src="../assets/Paragolpe 1.jpg" alt="paragolpe" class="img-1">
+          </div>
           <br>
           <br>
           <br>
