--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
 
         <ul>
 
-          <li><a href="./index.html">Incio</a></li>
-
           <li><a href="./pages/Opticas.html">Ópticas</a></li>
 
           <li><a href="./pages/Faros.html">Faros</a></li>
@@ -64,7 +62,7 @@
 
     <main class="container-fluid">
 
-     <section class="col-xl-12 row-xl-6 d-flex flex-column justify-content-center align-items-center" id="main">
+     <section class="col-xl-12 d-flex flex-column justify-content-center align-items-center" id="main">
     
       <div class="row">
 
@@ -87,6 +85,10 @@
 
       </div>
 
+     </section>
+
+     <section class="container-fluid col-2 d-flex flex-column justify-content-center align-items-center">
+       <p class="lead" id="p-index">Ventas de Autopartes</p>
      </section>
 
 
