--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <meta charset="UTF-8">
 
+  <meta name="description" content="Compra la mejor calidad de autopartes multimarcas">
+
+  <meta name="keywords" content="OPTICAS, PARAGOLPES, FAROS, AUTOPARTES">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
