--- a/pages/Paragolpes.html
+++ b/pages/Paragolpes.html
@@ -6,6 +6,10 @@
 <head>
 
   <meta charset="UTF-8">
+  
+  <meta name="description" content="Compra paragolpes en SP Autoaprtes">
+
+  <meta name="keywords" content="SP, PARAGOLPES, AUTOPARTES">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
