--- a/pages/Faros.html
+++ b/pages/Faros.html
@@ -7,6 +7,10 @@
 
   <meta charset="UTF-8">
 
+  <meta name="description" content="Compra faros en SP Autopartes">
+
+  <meta name="keywords" content="SP, FAROS, AUTOPARTES">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
