--- a/pages/Faros.html
+++ b/pages/Faros.html
@@ -27,43 +27,26 @@
 
 <body>
 
-
+  <!-- TITULO -->
   <header>
-
-
     <div class="header_test">
-      
       <h1>SP AUTOPARTES</h1>
-
     </div>
-
+      <!-- BARRA DE NAVEGACION -->
     <div>
-
       <nav class="estilo-lista">
-
         <ul>
-
           <li><a href="../index.html">Incio</a></li>
-
           <li><a href="../pages/Opticas.html">Ópticas</a></li>
-
           <li><a href="../pages/Faros.html">Faros</a></li>
-
           <li><a href="../pages/Paragolpes.html">Paragolpes</a></li>
-
           <li><a href="../pages/Contacto.html">Contacto</a></li>
-
         </ul>
-
       </nav>
-
     </div>
-
   </header>
-
-
+  <!-- CUERPO PAGINA WEB -->
     <main>
-
       <fieldset>
         <form action="" method="post">
        <div class="div-tres">
@@ -76,10 +59,20 @@
             <option value="Renault">Renault</option>
             <option value="Volkswagen">Volkswagen</option>   
            </select>
-          </div>
-          <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-          <img src="../assets/Faros 1.jpg" alt="Faros" class="img-1">
-          </div>
+           <div>
+            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
+              <img src="../assets/Faros.jpg" alt="Opticas" class="img-1">
+            </div>
+            <div class="col-8 d-flex flex-column justify-content-left align-items-center">
+            </div>
+              <img src="../assets/faros 3.png" alt="Opticas" class="img-2">
+            </div>
+            <div class="col-10 d-flex flex-column justify-content-right align-items-center">
+              <img src="../assets/Faros 4.jpg" alt="Opticas" class="img-3">
+            </div>
+            <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+              <img src="../assets/faros 5.jpg" alt="Opticas" class="img-4">
+            </div>
           <br>
           <br>
           <br>
@@ -103,15 +96,6 @@
           <legend class="legend-cuatro">AÑO</legend>
           <div>
           <select name="año" id="año">
-              <option value="2010">2010</option>
-              <option value="2011">2011</option>
-              <option value="2012">2012</option>
-              <option value="2013">2013</option>
-              <option value="2014">2014</option>
-              <option value="2015">2015</option>
-              <option value="2016">2016</option>
-              <option value="2017">2017</option>
-              <option value="2018">2018</option>
               <option value="2019">2019</option>
               <option value="2020">2020</option>
               <option value="2021">2021</option>
@@ -124,18 +108,13 @@
           <input type="reset" name="Limpiar" value="Cancelar">
          </div> 
     </fieldset>
-  
-
-    </main>
-
-  </div>
-
+  </main>
+ </div>
 </body>
-
-
-<footer class="estilo-footer"> 
-
-  <p> www.SPAutopartes.com.ar /// ----- SP AUTOPARTES® copyright© ----- </p> </footer>
+<!-- FOOTER -->
+<footer class="estilo-footer">
+  <p> www.SPAutopartes.com.ar /// ----- SP AUTOPARTES® copyright© ----- </p>
+</footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
