--- a/index.html
+++ b/index.html
@@ -27,49 +27,33 @@
 
 <body>
 
-
+  <!-- TITULO -->
   <header class="container-fluid">
-
-
     <div class="header_test">
-
       <h1>SP AUTOPARTES</h1>
-
     </div>
-
-  
+ <!-- BARRA DE NAVEGACION -->
     <div> 
-
       <nav class="estilo-lista">
-
         <ul>
-
+          <li><a href="./index.html">Inicio</a></li>
           <li><a href="./pages/Opticas.html">Ópticas</a></li>
-
           <li><a href="./pages/Faros.html">Faros</a></li>
-
           <li><a href="./pages/Paragolpes.html">Paragolpes</a></li>
-
           <li><a href="./pages/Contacto.html">Contacto</a></li>
-
         </ul>
-    
-
       </nav>
-
-
+    </div>
   </header>
-
-
-
-
-
-    <main class="container-fluid">
-
-     <section class="col-xl-12 d-flex flex-column justify-content-center align-items-center" id="main">
-    
+ <!-- CUERPO PAGINA WEB -->
+  <main class="container-fluid">
+    <section class="section-1">
+      <p>La mejor calidad en venta de Autopartes. Somos una empresa familiar dedicada exclusivamente a la venta de autopartes desde el año 2010. Abarcamos todas las marcas, su consulta no es molestia.
+      </p>
+     </section>
+    <section class="col-xl-12 d-flex flex-column justify-content-center align-items-center" id="main">
+      <!-- CAROUSEL -->
       <div class="row">
-
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -83,29 +67,16 @@
             </div>
           </div>
         </div>
-
-   
         </div>
-
       </div>
-
      </section>
-
-     <section class="container-fluid col-2 d-flex flex-column justify-content-center align-items-center">
-       <p class="lead" id="p-index">Ventas de Autopartes</p>
-     </section>
-
-
     </main>
-
   </div>
-
 </body>
-
-
+<!-- FOOTER -->
 <footer class="estilo-footer"> 
-
-  <p> www.SPAutopartes.com.ar /// ----- SP AUTOPARTES® copyright© ----- </p> </footer>
+  <p> www.SPAutopartes.com.ar /// ----- SP AUTOPARTES® copyright© ----- </p>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
